# helix-db

./: .gitignore  Cargo.toml  install.sh  parca.yaml
helix-cli/src/: cloud_client.rs  config.rs  main.rs
helix-cli/src/commands/: cloud.rs  delete.rs  init.rs  mod.rs  push.rs  start.rs  status.rs  stop.rs
helix-cli/src/commands/integrations/: ecr.rs  fly.rs
helix-cli/thoughts/: codebase_analysis.md  final_validation_report.md  implementation_progress.md  plan_development.md  plan_validation.md
helix-container/: Cargo.toml
helix-container/src/: main.rs
helix-db/: Cargo.toml
helix-db/benches/: hnsw_benches.rs
helix-db/src/: lib.rs
helix-db/src/helix_engine/bm25/: bm25.rs
helix-db/src/helix_engine/traversal_core/: traversal_iter.rs
helix-db/src/helix_engine/traversal_core/ops/vectors/: insert.rs  search.rs
helix-db/src/helix_engine/vector_core/: hnsw.rs  mod.rs  txn.rs  utils.rs  vector.rs  vector_core.rs
helix-db/src/helix_gateway/: gateway.rs
