[package]
name = "helix-container"
version = "0.1.0"
edition = "2024"

[dependencies]
helix-db = { path = "../helix-db" }
helix-macros = { path = "../helix-macros" }

inventory = "0.3.16"
rand = "0.9.1"
dirs = "5.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sonic-rs = "0.5.0"
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.140"
uuid = { version = "1.12.1", features = ["std", "v4", "v6", "fast-rng"] }
heed3 = "0.22.0"
async-trait = "0.1"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
dotenvy = "0.15.7"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
jemalloc_pprof = "0.8.1"

[features]
dev = ["helix-db/dev-instance"]
